[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/rovers/PrimitiveRover.gd" type="Script" id=1]
[ext_resource path="res://assets/scribble_pack/PNG/Default/tile_spike.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31 )

[node name="PrimitiveRover" type="KinematicBody2D"]
input_pickable = true
collision_layer = 2
collision_mask = 19
script = ExtResource( 1 )

[node name="body" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -31 )
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_PrimitiveRover_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_PrimitiveRover_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PrimitiveRover_mouse_exited"]
